# 2025-05-24-storage-effect

./: CHANGELOG.md  README.md  cabal.project  default.nix  shell.nix
backend/backend-api/: backend-api.cabal
backend/backend-api/src/Backend/: API.hs
backend/backend-server/: backend-server.cabal
backend/backend-server/src/Backend/: Server.hs
core/: core.cabal
core/src/: Core.hs
nix/: nixpkgs.nix  pre-commit.nix
storage/storage/: storage.cabal
storage/storage-memory/: storage-memory.cabal
storage/storage-memory/src/Storage/: Memory.hs
storage/storage-postgresql/: storage-postgresql.cabal
storage/storage-postgresql/src/Storage/: Postgres.hs
storage/storage/src/Storage/: Effect.hs
