cabal-version:      3.0
name:               storage-postgresql
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
author:             Frederick Pringle
maintainer:         freddyjepringle@gmail.com
copyright:          Copyright(c) Frederick Pringle 2025
homepage:           https://github.com/fpringle/2025-05-24-storage-effect
build-type:         Simple

common warnings
  ghc-options: -Wall -Wno-unused-do-bind -fplugin=Effectful.Plugin

common deps
  build-depends:
    , base >= 4 && < 5
    , effectful-core
    , effectful-plugin
    , core
    , lens
    , storage
    , postgresql-simple

common extensions
  default-extensions:
    AllowAmbiguousTypes
    Arrows
    BangPatterns
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveGeneric
    DeriveTraversable
    DerivingVia
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedStrings
    PackageImports
    PatternSynonyms
    PolyKinds
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances
    ViewPatterns

library
  import:
      warnings
    , deps
    , extensions
  exposed-modules:
      Storage.Postgres
  -- other-extensions:
  hs-source-dirs:   src
  default-language: Haskell2010
